Sequencia da atividade de bootstrap; Inclusão de card´s Inclusão de carrossel de cards.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,142 @@
       </div>
       <!-- fim introdução carrossel -->
 
+      <h1 class="titleSection1">Seção Tecnologia</h1>
+
+      <!-- introdução grupo de cards -->
+      <!-- inicio seção1 -->
+
+      <div id="carouselCards1" class="carousel">
+      <section class="pt-5 pb-5">
+        <div class="container"> 
+
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+
+          <div class="row">
+
+            <div class="col-md-3">
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/img/img1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Placa de Video Turbinada </h5>
+          <p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+          <!-- <a href="#" class="btn btn-primary">Comprar agora</a> -->
+          <button type="button" class="btn btn-primary">Comprar agora</button>
+        </div>
+      </div>
+    </div>
+
+            <div class="col-md-3">
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/img/img2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Placa de Video Top1000 </h5>
+          <p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+          <a href="#" class="btn btn-primary">Comprar agora</a>
+        </div>
+      </div>
+    </div>
+
+            <div class="col-md-3">
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/img/img3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Notebook Acer Aspire 3 </h5>
+          <p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+          <a href="#" class="btn btn-primary">Comprar agora</a>
+        </div>
+      </div>
+    </div>
+
+            <div class="col-md-3">
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/img/img4.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Super Fone da Turma2 </h5>
+          <p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+          <a href="#" class="btn btn-primary">Comprar agora</a>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
+
+<!-- botões de controles do carrossel de card´s -->
+
+<button class="carousel-control-prev" type="button" data-bs-target="#carouselCards1" data-bs-slide="prev">
+  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <span class="visually-hidden">Previous</span>
+</button>
+<button class="carousel-control-next" type="button" data-bs-target="#carouselCards1" data-bs-slide="next">
+  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <span class="visually-hidden">Next</span>
+</button>
+
+    </div>
+    </section>
+  </div>
+
+
+      <h1 class="titleSection2">Seção Games</h1>
+
+          <!-- inicio seção2 -->
+    <section class="pt-5 pb-5">
+      <div class="container"> 
+        <div class="row">
+
+          <div class="col-md-3">
+    <div class="card" style="width: 18rem;">
+      <img src="./assets/img/img1.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Placa de Video Turbinada </h5>
+        <p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+        <!-- <a href="#" class="btn btn-primary">Comprar agora</a> -->
+        <button type="button" class="btn btn-primary">Comprar agora</button>
+      </div>
+    </div>
+  </div>
+
+          <div class="col-md-3">
+    <div class="card" style="width: 18rem;">
+      <img src="./assets/img/img2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Placa de Video Top1000 </h5>
+        <p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+        <a href="#" class="btn btn-primary">Comprar agora</a>
+      </div>
+    </div>
+  </div>
+
+          <div class="col-md-3">
+    <div class="card" style="width: 18rem;">
+      <img src="./assets/img/img3.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Notebook Acer Aspire 3 </h5>
+        <p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+        <a href="#" class="btn btn-primary">Comprar agora</a>
+      </div>
+    </div>
+  </div>
+
+          <div class="col-md-3">
+    <div class="card" style="width: 18rem;">
+      <img src="./assets/img/img4.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Super Fone da Turma2 </h5>
+        <p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+        <a href="#" class="btn btn-primary">Comprar agora</a>
+      </div>
+    </div>
+  </div>
+
+ 
+
+  </div>
+  </div>
+  </section>
+
 
     
       <!-- link javascript -->
