--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       <section class="pt-5 pb-5">
         <div class="container"> 
 
+          <!-- inicio carrossel de card´s -->
           <div class="carousel-inner">
             <div class="carousel-item active">
 
@@ -140,6 +141,63 @@
     </div>
   </div>
 </div>
+
+<!-- inicio 2º carrossel de card´s -->
+<div class="carousel-inner">
+  <div class="carousel-item ">
+
+<div class="row">
+
+  <div class="col-md-3">
+<div class="card" style="width: 18rem;">
+<img src="./assets/img/img5.jpg" class="card-img-top" alt="...">
+<div class="card-body">
+<h5 class="card-title">Placa de Video Turbinada </h5>
+<p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+<!-- <a href="#" class="btn btn-primary">Comprar agora</a> -->
+<button type="button" class="btn btn-primary">Comprar agora</button>
+</div>
+</div>
+</div>
+
+  <div class="col-md-3">
+<div class="card" style="width: 18rem;">
+<img src="./assets/img/img6.jpg" class="card-img-top" alt="...">
+<div class="card-body">
+<h5 class="card-title">Placa de Video Top1000 </h5>
+<p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+<a href="#" class="btn btn-primary">Comprar agora</a>
+</div>
+</div>
+</div>
+
+  <div class="col-md-3">
+<div class="card" style="width: 18rem;">
+<img src="./assets/img/img7.jpg" class="card-img-top" alt="...">
+<div class="card-body">
+<h5 class="card-title">Notebook Acer Aspire 3 </h5>
+<p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+<a href="#" class="btn btn-primary">Comprar agora</a>
+</div>
+</div>
+</div>
+
+  <div class="col-md-3">
+<div class="card" style="width: 18rem;">
+<img src="./assets/img/img8.jpg" class="card-img-top" alt="...">
+<div class="card-body">
+<h5 class="card-title">Super Fone da Turma2 </h5>
+<p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
+<a href="#" class="btn btn-primary">Comprar agora</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+ 
+
 
 <!-- botões de controles do carrossel de card´s -->
 
@@ -213,6 +271,31 @@
 
   </div>
   </div>
+  </section>
+
+  <!-- inicio footer -->
+
+  <section class="footer">
+    <div class="rSociais"> 
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a href="#"><i class="fab fa-whatsapp"></i></a>
+    </div>
+
+    <ul>
+      <li>
+        <a href="">Sobre</a>
+      </li>
+      <li>
+        <a href="">Termos de Devolução</a>
+      </li>
+    <li>
+      <a href="">Redes Sociais</a>
+    </li>
+  </ul>
+  <p class="copyright">Casa do Computador 2024</p>
   </section>
 
 
