alteração do footer1 inclusão do footer2 adição de intervalo no carrossel estilização do footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <!-- introdução bootstrap -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg" >
         <div class="container">
           <a class="navbar-brand" href="#"><img src="./assets/img/logoImg.avif" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,14 +39,14 @@
       <!-- fim introdução bootstrap -->
 
     <!-- introdução carrossel -->
-    <div id="carouselCaptions" class="carousel slide">
-        <div class="carousel-indicators">
+    <div id="carouselCaptions" class="carousel slide " data-bs-ride="carousel" data-bs-interval="3000" >
+        <div class="carousel-indicators" >
           <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
+        <div class="carousel-inner"  >
+          <div class="carousel-item active" >
             <img src="https://images.unsplash.com/photo-1537498425277-c283d32ef9db?q=80&w=2078&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Primeiro Slide de Carrossel</h5>
@@ -95,7 +95,7 @@
           <div class="row">
 
             <div class="col-md-3">
-      <div class="card" style="width: 18rem;">
+      <div class="card" >
         <img src="./assets/img/img1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Placa de Video Turbinada </h5>
@@ -107,7 +107,7 @@
     </div>
 
             <div class="col-md-3">
-      <div class="card" style="width: 18rem;">
+      <div class="card" >
         <img src="./assets/img/img2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Placa de Video Top1000 </h5>
@@ -118,7 +118,7 @@
     </div>
 
             <div class="col-md-3">
-      <div class="card" style="width: 18rem;">
+      <div class="card" >
         <img src="./assets/img/img3.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Notebook Acer Aspire 3 </h5>
@@ -129,7 +129,7 @@
     </div>
 
             <div class="col-md-3">
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img src="./assets/img/img4.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Super Fone da Turma2 </h5>
@@ -149,7 +149,7 @@
 <div class="row">
 
   <div class="col-md-3">
-<div class="card" style="width: 18rem;">
+<div class="card">
 <img src="./assets/img/img5.jpg" class="card-img-top" alt="...">
 <div class="card-body">
 <h5 class="card-title">Placa de Video Turbinada </h5>
@@ -161,7 +161,7 @@
 </div>
 
   <div class="col-md-3">
-<div class="card" style="width: 18rem;">
+<div class="card">
 <img src="./assets/img/img6.jpg" class="card-img-top" alt="...">
 <div class="card-body">
 <h5 class="card-title">Placa de Video Top1000 </h5>
@@ -172,7 +172,7 @@
 </div>
 
   <div class="col-md-3">
-<div class="card" style="width: 18rem;">
+<div class="card">
 <img src="./assets/img/img7.jpg" class="card-img-top" alt="...">
 <div class="card-body">
 <h5 class="card-title">Notebook Acer Aspire 3 </h5>
@@ -183,7 +183,7 @@
 </div>
 
   <div class="col-md-3">
-<div class="card" style="width: 18rem;">
+<div class="card">
 <img src="./assets/img/img8.jpg" class="card-img-top" alt="...">
 <div class="card-body">
 <h5 class="card-title">Super Fone da Turma2 </h5>
@@ -223,7 +223,7 @@
         <div class="row">
 
           <div class="col-md-3">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="./assets/img/img1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Placa de Video Turbinada </h5>
@@ -235,7 +235,7 @@
   </div>
 
           <div class="col-md-3">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="./assets/img/img2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Placa de Video Top1000 </h5>
@@ -246,7 +246,7 @@
   </div>
 
           <div class="col-md-3">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="./assets/img/img3.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Notebook Acer Aspire 3 </h5>
@@ -257,7 +257,7 @@
   </div>
 
           <div class="col-md-3">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="./assets/img/img4.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Super Fone da Turma2 </h5>
@@ -273,9 +273,17 @@
   </div>
   </section>
 
-  <!-- inicio footer -->
+  <!-- inicio seção footer -->
 
-  <section class="footer">
+  <div class="footer1">
+    <div class="infoFooter1">
+      <p>Horário de Funcionamento: Seg / Sáb - 07:00 às 18:00</p>
+      <a id="telFooter" href="tel:+553299999-9999">+55 32 9999-9999</a>
+      <p>Av. Humberto Mauro, 150, Cataguases - MG</p>
+    </div>
+  </div>
+
+  <section class="footer2">
     <div class="rSociais"> 
       <a href="#"><i class="fab fa-instagram"></i></a>
       <a href="#"><i class="fab fa-twitter"></i></a>
@@ -286,13 +294,13 @@
 
     <ul>
       <li>
-        <a href="">Sobre</a>
+        <a href="#">Sobre</a>
       </li>
       <li>
-        <a href="">Termos de Devolução</a>
+        <a href="#">Termos de Devolução</a>
       </li>
     <li>
-      <a href="">Redes Sociais</a>
+      <a href="#">Redes Sociais</a>
     </li>
   </ul>
   <p class="copyright">Casa do Computador 2024</p>
@@ -302,6 +310,6 @@
     
       <!-- link javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+    <script src="https://kit.fontawesome.com/b2ad1a6930.js" crossorigin="anonymous"></script>
 </body>
 </html>
