--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/reset.css"> -->
     <title>Introdução Bootstrap</title>
 </head>
 <body>
@@ -141,64 +142,7 @@
     </div>
   </div>
 </div>
-
-<!-- inicio 2º carrossel de card´s -->
-<div class="carousel-inner">
-  <div class="carousel-item ">
-
-<div class="row">
-
-  <div class="col-md-3">
-<div class="card">
-<img src="./assets/img/img5.jpg" class="card-img-top" alt="...">
-<div class="card-body">
-<h5 class="card-title">Placa de Video Turbinada </h5>
-<p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
-<!-- <a href="#" class="btn btn-primary">Comprar agora</a> -->
-<button type="button" class="btn btn-primary">Comprar agora</button>
-</div>
-</div>
-</div>
-
-  <div class="col-md-3">
-<div class="card">
-<img src="./assets/img/img6.jpg" class="card-img-top" alt="...">
-<div class="card-body">
-<h5 class="card-title">Placa de Video Top1000 </h5>
-<p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
-<a href="#" class="btn btn-primary">Comprar agora</a>
-</div>
-</div>
-</div>
-
-  <div class="col-md-3">
-<div class="card">
-<img src="./assets/img/img7.jpg" class="card-img-top" alt="...">
-<div class="card-body">
-<h5 class="card-title">Notebook Acer Aspire 3 </h5>
-<p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
-<a href="#" class="btn btn-primary">Comprar agora</a>
-</div>
-</div>
-</div>
-
-  <div class="col-md-3">
-<div class="card">
-<img src="./assets/img/img8.jpg" class="card-img-top" alt="...">
-<div class="card-body">
-<h5 class="card-title">Super Fone da Turma2 </h5>
-<p class="card-text">O Aspire 3 foi desenvolvido para aqueles que querem estudar, trabalhar ou se divertir com facilidade gastando pouco.</p>
-<a href="#" class="btn btn-primary">Comprar agora</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-
  
-
-
 <!-- botões de controles do carrossel de card´s -->
 
 <button class="carousel-control-prev" type="button" data-bs-target="#carouselCards1" data-bs-slide="prev">
